--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "files": [
     "eslint-config/index.js",
-    "prettier-preset.js",
-    "tailwind-preset.js",
-    "tsconfig.base.json"
+    "prettier-config/index.js",
+    "tailwind-config/index.js",
+    "typescript-config/tsconfig.base.json"
   ],
   "dependencies": {
     "@eslint/js": "^9.27.0",
@@ -19,7 +19,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-vue": "^10.1.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.8",
     "tailwindcss-animate": "^1.0.7"
   }
 }
