--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,26 +32,26 @@
     "vue": ">=3"
   },
   "dependencies": {
-    "@vueuse/core": "^13.2.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "radix-vue": "^1.4.8",
-    "tailwind-merge": "^2.2.1",
+    "@vueuse/core": "^13.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "radix-vue": "^1.9.17",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@histoire/plugin-vue": "^0.17.6",
     "@shadow/config": "workspace:*",
+    "@tailwindcss/vite": "^4.1.8",
     "@types/node": "^20.11.24",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.18",
     "histoire": "^0.17.6",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vite-plugin-dts": "^3.7.3",
-    "vue": "^3.5.15"
+    "vue": "^3.5.16"
   }
 }
