--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "build": "vite build",
-    "dev": "histoire dev",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prepublishOnly": "pnpm build",
     "changeset": "changeset",
     "changeset:add": "changeset add",
@@ -41,17 +42,19 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@histoire/plugin-vue": "^0.17.6",
     "@shadow/config": "workspace:*",
-    "@tailwindcss/vite": "^4.1.8",
-    "@types/node": "^20.11.24",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.18",
-    "histoire": "^0.17.6",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-links": "^9.0.4",
+    "@storybook/vue3-vite": "^9.0.4",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "^22.15.29",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "postcss": "^8.4.35",
+    "storybook": "^9.0.4",
     "tailwindcss": "^4.1.8",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vite-plugin-dts": "^3.7.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.16"
   }
 }
