--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,8 +43,11 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@shadow/config": "workspace:*",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-links": "^9.0.4",
+    "@chromatic-com/storybook": "^4.0.0",
+    "@storybook/addon-a11y": "^9.0.4",
+    "@storybook/addon-docs": "^9.0.4",
+    "@storybook/addon-onboarding": "^9.0.4",
+    "@storybook/addon-vitest": "^9.0.4",
     "@storybook/vue3-vite": "^9.0.4",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.15.29",
