--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,22 +42,27 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@shadow/config": "workspace:*",
     "@chromatic-com/storybook": "^4.0.0",
-    "@storybook/addon-a11y": "^9.0.4",
-    "@storybook/addon-docs": "^9.0.4",
-    "@storybook/addon-onboarding": "^9.0.4",
-    "@storybook/addon-vitest": "^9.0.4",
-    "@storybook/vue3-vite": "^9.0.4",
+    "@shadow/config": "workspace:*",
+    "@storybook/addon-a11y": "^9.0.5",
+    "@storybook/addon-docs": "^9.0.5",
+    "@storybook/addon-onboarding": "^9.0.5",
+    "@storybook/addon-vitest": "^9.0.5",
+    "@storybook/vue3-vite": "^9.0.5",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/browser": "^3.2.1",
+    "@vitest/coverage-v8": "^3.2.1",
+    "eslint-plugin-storybook": "^9.0.5",
+    "playwright": "^1.52.0",
     "postcss": "^8.4.35",
-    "storybook": "^9.0.4",
+    "storybook": "^9.0.5",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.1",
     "vue": "^3.5.16"
   }
 }
