--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,17 +14,20 @@
     "@shadow/ui": "workspace:*",
     "@vueuse/core": "^13.3.0",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@shadow/config": "workspace:*",
     "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.4",
-    "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "@tailwindcss/postcss": "^4.1.8"
   }
 }
