--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,8 +34,7 @@
     "tailwindcss": "^4.1.8",
     "tailwind-merge": "^3.3.0",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "radix-vue": "^1.9.17"
+    "clsx": "^2.1.1"
   },
   "peerDependenciesMeta": {
     "vue": {
@@ -58,7 +57,6 @@
     "@vueuse/core": "^13.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
