--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:dev": "turbo run build:dev",
+    "build:prod": "turbo run build:prod",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,vue}\"",
-    "clean": "turbo run clean && rm -rf node_modules"
+    "type-check": "turbo run type-check",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "storybook": "turbo run storybook",
+    "build-storybook": "turbo run build-storybook"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
     "turbo": "^1.12.5"
   },
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@10.11.1",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
-} 
+}
