--- a/turbo.json
+++ b/turbo.json
@@ -1,25 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
+  "globalDependencies": ["**/.env.*local", "**/.env.*", "**/.env"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"],
-      "cache": true
+      "cache": true,
+      "env": ["NODE_ENV", "VITE_*"]
     },
     "build:dev": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"],
-      "cache": true
+      "cache": true,
+      "env": ["NODE_ENV", "VITE_*"]
     },
     "build:prod": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"],
-      "cache": true
+      "cache": true,
+      "env": ["NODE_ENV", "VITE_*"]
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": ["NODE_ENV", "VITE_*"]
     },
     "lint": {
       "outputs": []
@@ -41,4 +45,4 @@
       "outputs": ["storybook-static/**"]
     }
   }
-} 
+}
